--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <link rel="icon" href="logo1.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reads Ranked</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="header">
-        <div class="logo">
-          <a href="index.html">ReadsRanked</a>
+    <div class="video-banner">
+        <div class="header">
+          <div class="logo">
+            <a href="index.html">ReadsRanked</a>
+          </div>
+          <div class="header-buttons">
+            <button onclick="location.href='faq.html'">FAQ</button>
+            <button onclick="location.href='donate.html'">Donate</button>
+          </div>
         </div>
-        <div>
-          <button onclick="location.href='faq.html'">FAQ</button>
-          <button onclick="location.href='donate.html'">Donate</button>
-        </div>
-      </div>
-      
-      <div class="video-banner">
         <video autoplay loop muted>
           <source src="pages.mp4" type="video/mp4">
           Your browser does not support the video tag.
