db connected, website working

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
         </video>
         <h1>Rank the BEST Reads!</h1>
       </div>
-      
+
+      <div class="list-header">
+        <button class="filter">Filter</button>
+      </div>
       <div class="book-list">
         <!-- Dynamically populate this area with books -->
         <!-- Example of a book -->
