--- a/public/index.html
+++ b/public/index.html
@@ -33,21 +33,13 @@
         <form id="search-form">
           <div class="search">
             <span class="search-icon material-symbols-outlined">search</span>
-            <input class="search-input" type="search" id="location-input" placeholder="Search">
+            <input class="search-input" type="text" id="location-input" placeholder="Search">
         </div>
       </form>
         <button class="filter">Filter</button>
       </div>
       <div class="book-list">
-        <!-- Dynamically populate this area with books -->
-        <!-- Example of a book -->
-        <div class="book">
-          <h3>Book Title 1</h3>
-          <p>Author Name</p>
-          <!-- Other details like rank, rating, etc -->
-        </div>
-        <!-- Repeat for each book -->
       </div>
-      <script src="./search.js"></script>
+      <script src="js/search.js"></script>
 </body>
 </html>
