--- a/public/index.html
+++ b/public/index.html
@@ -27,19 +27,21 @@
           Your browser does not support the video tag.
         </video>
         <h1>Rank the BEST Reads!</h1>
-      </div>
+    </div>
 
       <div class="list-header">
         <form id="search-form">
           <div class="search">
             <span class="search-icon material-symbols-outlined">search</span>
             <input class="search-input" type="text" id="location-input" placeholder="Search">
-        </div>
-      </form>
+          </div>
+        </form>
         <button class="filter">Filter</button>
       </div>
       <div class="book-list">
       </div>
+    </div>
+      </body>
       <script src="js/search.js"></script>
 </body>
 </html>
